src/objects/pse__Forecast_Enhanced_Calculation__c.object
<CustomObject>
    <customHelpPage>pse__ForecastEnhancedCalculationHelp</customHelpPage>
    <description>Stores the parameters used to run a billing forecast calculation against a region, practice, or group.</description>
    <fields>
        <fullName>pse__Backlog_Calculation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the related backlog calculation.</description>
        <inlineHelpText>A lookup to the related backlog calculation.</inlineHelpText>
        <label>Backlog Calculation</label>
        <referenceTo>pse__Backlog_Calculation__c</referenceTo>
        <relationshipLabel>Forecast Calculations</relationshipLabel>
        <relationshipName>Forecast_Enhanced_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Batch_Id__c</fullName>
        <description>The batch ID for the billing forecast calculation process.</description>
        <externalId>true</externalId>
        <inlineHelpText>The batch ID for the forecast calculation process.</inlineHelpText>
        <label>Batch Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Batch_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The batch process used by this billing forecast calculation.</description>
        <inlineHelpText>The batch process used by this forecast calculation.</inlineHelpText>
        <label>Batch Process</label>
        <referenceTo>pse__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>Forecast Calculations</relationshipLabel>
        <relationshipName>Forecast_Enhanced_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Committed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the billing forecast has been committed and overrides can no longer be applied.</description>
        <inlineHelpText>Indicates the billing forecast has been committed and overrides can no longer be applied.</inlineHelpText>
        <label>Committed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Current__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this billing forecast calculation is the most recent for this RPG and time period.</description>
        <inlineHelpText>Indicates this billing forecast calculation is the most recent for this RPG and time period.</inlineHelpText>
        <label>Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Forecast_Setup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the billing forecast setup values used in this billing forecast calculation.</description>
        <inlineHelpText>A lookup to the forecast setup values used in this forecast calculation.</inlineHelpText>
        <label>Billing Forecast Setup</label>
        <referenceTo>pse__Forecast_Setup__c</referenceTo>
        <relationshipLabel>Billing Forecast Setup</relationshipLabel>
        <relationshipName>Forecast_Enhanced_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The group for this billing forecast calculation.</description>
        <inlineHelpText>The group for this forecast calculation.</inlineHelpText>
        <label>Group</label>
        <referenceTo>pse__Grp__c</referenceTo>
        <relationshipLabel>Billing Forecast Calculations</relationshipLabel>
        <relationshipName>Forecast_Enhanced_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The practice for this billing forecast calculation.</description>
        <inlineHelpText>The practice for this forecast calculation.</inlineHelpText>
        <label>Practice</label>
        <referenceTo>pse__Practice__c</referenceTo>
        <relationshipLabel>Billing Forecast Calculations</relationshipLabel>
        <relationshipName>Forecast_Enhanced_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The region for this billing forecast calculation.</description>
        <inlineHelpText>The region for this forecast calculation.</inlineHelpText>
        <label>Region</label>
        <referenceTo>pse__Region__c</referenceTo>
        <relationshipLabel>Billing Forecast Calculations</relationshipLabel>
        <relationshipName>Forecast_Enhanced_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Status__c</fullName>
        <description>The billing forecast calculation status.</description>
        <inlineHelpText>The forecast calculation status.</inlineHelpText>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Time_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The time period for this billing forecast calculation.</description>
        <inlineHelpText>The time period for this forecast calculation.</inlineHelpText>
        <label>Time Period</label>
        <referenceTo>pse__Time_Period__c</referenceTo>
        <relationshipLabel>Billing Forecast Calculations</relationshipLabel>
        <relationshipName>Forecast_Enhanced_Calculations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Total_Number_Of_Logs__c</fullName>
        <description>The total number of logs created as a result of errors occurring during the billing forecast calculation process.</description>
        <inlineHelpText>The total number of logs created as a result of errors occurring during the forecast calculation process.</inlineHelpText>
        <label>Total Number of Logs</label>
        <summaryForeignKey>pse__Forecast_Enhanced_Calculation_Log__c.pse__Forecast_Enhanced_Calculation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Billing Forecast Calculation</label>
    <listViews>
        <fullName>pse__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Billing Forecast Calculation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Forecast Calculations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>